--- a/homeStyle.css
+++ b/homeStyle.css
@@ -35,6 +35,16 @@ input[type="file"] {
   font-size: 16px;
 }
 
+textarea {
+  width: 80%;
+  height: 130px;
+  padding: 10px;
+  border: 1px solid #303030;
+  border-radius: 5px;
+  font-size: 16px;
+  resize: none;
+}
+
 #generatedLinkContainer {
   display: none;
   margin-top: 20px;
@@ -159,4 +169,25 @@ button:hover {
 a {
   text-decoration: underline;
   color: #434344fc;
+}
+
+/* Add this CSS for the spinner */
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #fff;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 1s linear infinite;
+  display: inline-block;
+  margin-left: 10px; /* Adjust the margin to your liking */
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
