--- a/style.css
+++ b/style.css
@@ -1,9 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Creepster&family=Playpen+Sans:wght@500&family=Rubik+Wet+Paint&display=swap");
 
+@import url("https://fonts.googleapis.com/css?family=Kaushan+Script");
+
 body {
-  background-color: #d4c9bd;
+  min-height: 100vh; /* Ensure the body takes at least the full viewport height */
   font-family: Arial;
   text-align: center;
+  margin: 0; /* Remove any default margins */
+  background: rgb(1, 65, 85);
+  background-image: radial-gradient(
+    circle at center bottom,
+    #e9b64b,
+    #c76075 15%,
+    #0d0d4b 75%,
+    #190e14 90%
+  );
+  background-size: cover; /* Ensure the background image covers the entire body */
+  background-position: center; /* Center the background image */
+  background-repeat: no-repeat; /* Prevent the background from repeating */
 }
 
 #header {
@@ -12,89 +26,51 @@ body {
   align-items: center;
 }
 
-.gift-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-h1 {
-  font-family: "Playpen Sans", cursive;
-  color: #333333;
-  margin-top: 50px;
-  text-shadow: rgb(115, 235, 235) 1px 0 8px;
-}
-
-h1:hover {
-  text-shadow: rgb(211, 206, 63) 1px 0 8px;
+.happy-birthday {
+  font-family: "Kaushan Script", "Sail", cursive;
+  color: white;
+  font-size: 40px;
 }
 
 .birthday-image {
-  width: 300px;
+  width: 250px;
   border-radius: 50%;
   border-width: 10px;
-  border: rgb(115, 235, 235) 5px solid;
-}
-
-.birthday-image:hover {
-  border: #fed6a6 5px solid;
+  /* border: rgb(115, 235, 235) 5px solid; */
 }
 
 .birthday-message {
-  font-family: "Rubik Wet Paint";
-  font-size: 30px;
-  color: #000000;
-  text-shadow: rgb(39, 255, 28) 1px 0 5px;
+  width: 500px;
+  font-family: "Playpen Sans", sans-serif;
+  color: white;
+  font-size: 20px;
+  margin-top: 20px;
 }
 
-.gift-img {
-  width: 400px;
-  height: 400px;
-  border: 5px solid #484646;
-  border-radius: 10px;
-  background-image: url("images/special-gift.avif");
-  background-size: cover;
+.from-sender {
+  font-family: "Kaushan Script", "Sail", cursive;
+  margin-top: 5px;
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
 }
 
-#happy:hover {
-  background-image: url("images/happy.gif");
-  border: 7px solid #9c9c9c;
-  border-radius: 30px;
+.send-your-gift {
+  background: #34495e;
+  color: #fff;
+  width: 200px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-align: center;
+  cursor: pointer;
+  margin-top: 20px;
+  display: block;
+  text-decoration: none;
+  font-family: "Rubik Wet Paint", sans-serif;
 }
 
-#people-react:hover {
-  background-image: url("images/tom-love.gif");
-  border: 7px solid #c42424;
-  border-radius: 30px;
-}
-
-#awesome:hover {
-  background-image: url("images/awesome.gif");
-  border: 7px solid #eb7542;
-  border-radius: 30px;
-}
-
-.best-wishes {
-  width: 400px;
-  height: 400px;
-  border: 5px solid #484646;
-  border-radius: 10px;
-  background-color: rgb(44, 44, 44);
-  background-size: cover;
-}
-
-.wishing-text {
-  margin: 40px 10px 20px 10px;
-  font-family: "Creepster", cursive;
-  font-size: 35px;
-  color: #e4e1e1;
-  text-shadow: rgb(17, 18, 18) 1px 0 5px;
-}
-
-#wishing:hover {
-  background: linear-gradient(to right, teal, #222325);
-  border: 7px solid #19cbd4;
-  border-radius: 30px;
+.send-your-gift:hover {
+  background: #2c3e50;
 }
 
 .copyright {
@@ -108,13 +84,4 @@ h1:hover {
 a {
   text-decoration: underline;
   color: #434344fc;
-}
-
-@media screen and (max-width: 420px) {
-  .gift-img {
-    width: 340px;
-  }
-  .best-wishes {
-    width: 340px;
-  }
 }
