--- a/homeStyle.css
+++ b/homeStyle.css
@@ -1,26 +1,38 @@
 body {
-  background-color: #d4c9bd;
-  font-size: 20px;
-  font-family: Arial, sans-serif;
+  min-height: 100vh; /* Ensure the body takes at least the full viewport height */
+  font-family: Arial;
   text-align: center;
+  margin: 0; /* Remove any default margins */
+  /* background: rgb(1, 65, 85); */
+  background-image: radial-gradient(
+    circle at center bottom,
+    #e9b64b,
+    #c76075 15%,
+    #0d0d4b 75%,
+    #190e14 90%
+  );
+  background-size: cover; /* Ensure the background image covers the entire body */
+  background-position: center; /* Center the background image */
+  background-repeat: no-repeat; /* Prevent the background from repeating */
 }
 
 h1 {
-  color: #333333;
+  color: #ffffff;
   margin-top: 20px;
 }
 
 .form-container {
   max-width: 500px;
   margin: 20px auto;
-  background-color: #ccb69f;
-  padding: 20px;
+  background: linear-gradient(45deg, #42a3ca, #b14778);
+  padding: 10px;
   border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   align-items: center;
 }
 
 label {
+  color: #e6e5e5;
+  font-size: 20px;
   display: block;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -28,7 +40,7 @@ label {
 
 input[type="text"],
 input[type="file"] {
-  width: 80%;
+  width: 75%;
   padding: 10px;
   border: 1px solid #303030;
   border-radius: 5px;
@@ -36,7 +48,7 @@ input[type="file"] {
 }
 
 textarea {
-  width: 80%;
+  width: 75%;
   height: 130px;
   padding: 10px;
   border: 1px solid #303030;
@@ -48,6 +60,8 @@ textarea {
 #generatedLinkContainer {
   display: none;
   margin-top: 20px;
+  align-items: center;
+  justify-content: center;
 }
 
 #generatedLink {
@@ -62,7 +76,7 @@ textarea {
 
 button {
   display: inline-block;
-  background-color: #b8885a;
+  background: linear-gradient(45deg, #0cb4e7ec, #43565f);
   color: #ffffff;
   margin-top: 20px;
   padding: 10px 20px;
@@ -77,29 +91,12 @@ button {
 }
 
 button:hover {
-  background-color: #a77b4f;
+  background: linear-gradient(45deg, #43565f, #0cb4e7ec);
 }
 
 .button-group {
   display: flex;
   justify-content: center;
-}
-
-#visitLinkButton {
-  background-color: #ff6b17;
-}
-
-#visitLinkButton:hover {
-  background-color: #e65a0f;
-}
-
-#copyLinkButton {
-  background-color: #ffcd88b0;
-  color: #333333;
-}
-
-#copyLinkButton:hover {
-  background-color: #e4b778;
 }
 
 #whatsapp {
@@ -108,7 +105,7 @@ button:hover {
   font-size: 40px;
   font-weight: 600;
   color: #ffffff;
-  background-color: #41ac64;
+  background: linear-gradient(45deg, #25d366, #128c7e);
   padding: 5px;
   text-align: center;
   cursor: pointer;
@@ -119,18 +116,25 @@ button:hover {
 }
 
 #whatsapp:hover {
-  color: #333333;
+  background: linear-gradient(45deg, #128c7e, #25d366);
 }
 
 .share-note {
+  width: 70%;
   margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 18px;
+  color: #f3f3f3;
+  background: #000000;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .expire-note {
-  font-size: 16px;
+  font-size: 18px;
   margin: 0;
-  color: darkred;
+  color: rgb(92, 9, 9);
 }
 
 .copy {
@@ -144,7 +148,7 @@ button:hover {
   top: -33px;
   left: 50%;
   transform: translateX(-50%);
-  background: #5b5858ab;
+  background: #537f99d3;
   padding: 5px 10px;
   border-radius: 20px;
   color: #fff;
@@ -168,7 +172,7 @@ button:hover {
 
 a {
   text-decoration: underline;
-  color: #434344fc;
+  color: #030324fc;
 }
 
 /* Add this CSS for the spinner */
