--- a/style.css
+++ b/style.css
@@ -2,90 +2,6 @@
 
 @import url("https://fonts.googleapis.com/css?family=Kaushan+Script");
 
-body {
-  min-height: 100vh; /* Ensure the body takes at least the full viewport height */
-  font-family: Arial;
-  text-align: center;
-  margin: 0; /* Remove any default margins */
-  background: rgb(1, 65, 85);
-  background-image: radial-gradient(
-    circle at center bottom,
-    #e9b64b,
-    #c76075 15%,
-    #0d0d4b 75%,
-    #190e14 90%
-  );
-  background-size: cover; /* Ensure the background image covers the entire body */
-  background-position: center; /* Center the background image */
-  background-repeat: no-repeat; /* Prevent the background from repeating */
-}
-
-#header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.happy-birthday {
-  font-family: "Kaushan Script", "Sail", cursive;
-  color: white;
-  font-size: 40px;
-}
-
-.birthday-image {
-  width: 250px;
-  border-radius: 50%;
-  border-width: 10px;
-  /* border: rgb(115, 235, 235) 5px solid; */
-}
-
-.birthday-message {
-  width: 500px;
-  font-family: "Playpen Sans", sans-serif;
-  color: white;
-  font-size: 20px;
-  margin-top: 20px;
-}
-
-.from-sender {
-  font-family: "Kaushan Script", "Sail", cursive;
-  margin-top: 5px;
-  font-size: 20px;
-  color: #fff;
-  text-align: center;
-}
-
-.send-your-gift {
-  background: #34495e;
-  color: #fff;
-  width: 200px;
-  padding: 10px 20px;
-  border-radius: 5px;
-  text-align: center;
-  cursor: pointer;
-  margin-top: 20px;
-  display: block;
-  text-decoration: none;
-  font-family: "Rubik Wet Paint", sans-serif;
-}
-
-.send-your-gift:hover {
-  background: #2c3e50;
-}
-
-.copyright {
-  margin-top: 50px;
-  font-family: "Courier New", Courier, monospace;
-  font-size: 15px;
-  color: #000000;
-  font-weight: bold;
-}
-
-a {
-  text-decoration: underline;
-  color: #434344fc;
-}
-
 /* General Styles for Desktop and Larger Screens */
 body {
   height: 100%;
@@ -139,8 +55,8 @@ body {
   text-align: center;
 }
 
-.send-your-gift {
-  background: #34495e;
+.try-it-now {
+  background: linear-gradient(45deg, #ff0000, #ff7300);
   color: #fff;
   width: 200px;
   padding: 10px 20px;
@@ -153,8 +69,8 @@ body {
   font-family: "Rubik Wet Paint", sans-serif;
 }
 
-.send-your-gift:hover {
-  background: #2c3e50;
+.try-it-now:hover {
+  background: linear-gradient(45deg, #ff7300, #ff0000);
 }
 
 .copyright {
@@ -163,6 +79,11 @@ body {
   font-size: 15px;
   color: #000000;
   font-weight: bold;
+}
+
+a {
+  text-decoration: underline;
+  color: #434344fc;
 }
 
 /* Media Queries for Mobile Screens */
