--- a/homeStyle.css
+++ b/homeStyle.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Creepster&family=Playpen+Sans:wght@500&family=Rubik+Wet+Paint&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Kaushan+Script");
+
 body {
   min-height: 100vh; /* Ensure the body takes at least the full viewport height */
-  font-family: Arial;
+  font-family: Arial, sans-serif;
   text-align: center;
   margin: 0; /* Remove any default margins */
-  /* background: rgb(1, 65, 85); */
   background-image: radial-gradient(
     circle at center bottom,
     #e9b64b,
@@ -19,6 +21,7 @@ body {
 h1 {
   color: #ffffff;
   margin-top: 20px;
+  font-size: 40px;
 }
 
 .form-container {
@@ -120,7 +123,7 @@ button:hover {
 }
 
 .share-note {
-  width: 70%;
+  width: 80%;
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
@@ -175,7 +178,7 @@ a {
   color: #030324fc;
 }
 
-/* Add this CSS for the spinner */
+/* Spinner */
 .spinner {
   border: 4px solid rgba(0, 0, 0, 0.1);
   border-left-color: #fff;
@@ -193,5 +196,73 @@ a {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+/* Responsive Media Queries */
+@media (max-width: 768px) {
+  h1 {
+    font-size: 28px;
+  }
+
+  .form-container {
+    width: 90%;
+  }
+
+  input[type="text"],
+  input[type="file"],
+  textarea {
+    width: 90%;
+  }
+
+  #generatedLink {
+    width: 90%;
+  }
+
+  .share-note {
+    width: 90%;
+  }
+
+  #whatsapp {
+    width: 50%;
+  }
+}
+
+@media (max-width: 420px) {
+  h1 {
+    font-size: 20px;
+  }
+
+  .form-container {
+    width: 95%;
+    padding: 5px;
+  }
+
+  input[type="text"],
+  input[type="file"],
+  textarea {
+    width: 95%;
+    font-size: 14px;
+  }
+
+  #generatedLink {
+    width: 95%;
+    font-size: 14px;
+  }
+
+  .button-group button {
+    width: 100%;
+    font-size: 14px;
+    margin: 10px 0;
+  }
+
+  #whatsapp {
+    width: 70%;
+    font-size: 30px;
+  }
+
+  .share-note {
+    width: 95%;
+    font-size: 16px;
   }
 }
