--- a/homeStyle.css
+++ b/homeStyle.css
@@ -102,6 +102,18 @@ button:hover {
   background: linear-gradient(45deg, #77a9c0, #0cb4e7ec);
 }
 
+#suggestMessageBtn {
+  font-size: 14px;
+  margin-top: 0px;
+  margin-bottom: 0;
+
+  background: linear-gradient(45deg, #e44688, #229bd3);
+}
+
+#suggestMessageBtn:hover {
+  background: linear-gradient(45deg, #229bd3, #e44688);
+}
+
 .button-group {
   display: flex;
   justify-content: center;
@@ -172,11 +184,10 @@ button:hover {
 }
 
 .copyright {
-  margin-top: 50px;
+  margin-top: 10px;
   font-family: "Courier New", Courier, monospace;
-  font-size: 15px;
+  font-size: 12px;
   color: #000000;
-  font-weight: bold;
 }
 
 a {
